# automating_tests

./: .gitignore  README.md  pyproject.toml  tox.ini
automating_tests/: __main__.py
automating_tests/backend/: example.py
testing/: test_example.py
tests/: test_example.py
