[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "automating_tests"
version = "0.1.0"
description = ""
authors = ["Auwate <auwate1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pylint = "^3.2.6"
black = "^24.4.2"
pytest-cov = "^5.0.0"
poetry = "^1.8.3"
flake8 = "^7.1.0"

[tool.black]
line-length = 100
target-version = ['py311']
skip-string-normalization = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203","W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]